tests/specs/compile/error/remote/output.out
hello
error: Uncaught (in promise) Error: boom!
throw new Error(value);
      ^
    at http://localhost:4545/compile/standalone_error_module_with_imports_2.ts:7:7
